# End-effector-Tracking

./: '  .exrc  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  config.0.pos  config.cao  config.cao.base  config.cao.pen  config.init  config.init.base  config.init.cracker  config.init.pen  config.init.stick  config.wrl  config.xml1280  key_pose.cpp  key_pose.txt  mainpage.dox  manifest.xml  pen.wrl  tags  types_c.taghl  types_py.taghl
catkin_generated/: env_cached.sh  generate_cached_setup.py  setup_cached.sh
config_bak/: config.0.pos  config.xml.klt  config.xml.me
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
doc/html/: CamShiftTracking_8h_source.html  KernelBasedTracking_8h_source.html  activeModelTracker_8cpp.html  activeModelTracker_8cpp__incl.map  activeModelTracker_8cpp__incl.md5  activeModelTracker_8h.html  activeModelTracker_8h__dep__incl.map  activeModelTracker_8h__dep__incl.md5  activeModelTracker_8h__incl.map  activeModelTracker_8h__incl.md5  activeModelTracker_8h_source.html  annotated.html  baseTracker_8h.html  baseTracker_8h__dep__incl.map  baseTracker_8h__dep__incl.md5  baseTracker_8h__incl.md5  baseTracker_8h_source.html  cadModel_8cpp.html  cadModel_8cpp__incl.map  cadModel_8cpp__incl.md5  cadModel_8h.html  cadModel_8h__dep__incl.map  cadModel_8h__dep__incl.md5  cadModel_8h__incl.md5  cadModel_8h_source.html  classCEndeffectorTracking-members.html  classCEndeffectorTracking.html  classCamShiftTracking-members.html  classCamShiftTracking.html  classKernelBasedTracking-members.html  classKernelBasedTracking.html  classactiveModelTracker-members.html  classactiveModelTracker.html  classactiveModelTracker__inherit__graph.map  classactiveModelTracker__inherit__graph.md5  classbaseTracker-members.html  classbaseTracker.html  classbaseTracker__inherit__graph.map  classbaseTracker__inherit__graph.md5  classcadModel-members.html  (+109 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6d.js  all_70.js  all_72.js  all_74.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_68.js  classes_6b.js  classes_6d.js  enums_74.js  files_61.js  files_62.js  files_63.js  files_68.js  files_6b.js  files_6d.js  files_74.js  functions_63.js  functions_66.js  functions_67.js  functions_68.js  functions_69.js  functions_6b.js  functions_6c.js  functions_6d.js  functions_70.js  functions_72.js  functions_74.js  search.js  (+6 more)
doc/latex/: activeModelTracker_8cpp.tex  activeModelTracker_8cpp__incl.md5  activeModelTracker_8h.tex  activeModelTracker_8h__dep__incl.md5  activeModelTracker_8h__incl.md5  annotated.tex  baseTracker_8h.tex  baseTracker_8h__dep__incl.md5  baseTracker_8h__incl.md5  cadModel_8cpp.tex  cadModel_8cpp__incl.md5  cadModel_8h.tex  cadModel_8h__dep__incl.md5  cadModel_8h__incl.md5  classCEndeffectorTracking.tex  classCamShiftTracking.tex  classKernelBasedTracking.tex  classactiveModelTracker.tex  classactiveModelTracker__inherit__graph.md5  classbaseTracker.tex  classbaseTracker__inherit__graph.md5  classcadModel.tex  classcadModel__inherit__graph.md5  classhoughLineBasedTracker.tex  classkltFbTracker.tex  classkltFbTracker__coll__graph.md5  classmbtEdgeKltTracker.tex  classmbtEdgeKltTracker__inherit__graph.md5  classmbtEdgeTracker.tex  classmbtEdgeTracker__inherit__graph.md5  classmbtKltTracker.tex  classmbtKltTracker__coll__graph.md5  classmedianFlowTracking.tex  doxygen.sty  files.tex  hierarchy.tex  houghLineBasedTracker_8cpp.tex  houghLineBasedTracker_8cpp__incl.md5  houghLineBasedTracker_8h.tex  houghLineBasedTracker_8h__dep__incl.md5  (+31 more)
gtest/: Makefile
include/endeffector_tracking/: .track_ros.h.swo  CamShiftTracking.h  KernelBasedTracking.h  activeModelTracker.h  baseTracker.h  cadModel.h  cvBaseTracker.h  houghLineBasedTracker.h  keyFrameBasedTracker.h  kltFbTracker.h  mbtEdgeKltTracker.h  mbtEdgeTracker.h  mbtKltTracker.h  medianFlowTracking.h  nonparametricTextureLearningTracker.h  superResolutionTracker.h  textureTracker.h  track_ros.h  track_ros.h~
launch/: endeffectorTracking.launch
patch/: vpPoseFeatures.h
src/: .camshiftdemo.cpp.swp  CamShiftTracking.cpp  KernelBasedTracking.cpp  activeModelTracker.cpp  cadModel.cpp  cvBaseTracker.h  houghLineBasedTracker.cpp  keyFrameBasedTracker.cpp  kltFbTracker.cpp  mbtEdgeKltTracker.cpp  mbtEdgeTracker.cpp  mbtKltTracker.cpp  medianFlowTracking.cpp  nonparametricTextureLearningTracker.cpp  superResolutionTracker.cpp  textureTracker.cpp  track_node.cpp  track_ros.cpp  track_ros.cpp~
